Fix unclickable (due to z-index) events#16

--- a/src/app/home/sections/charts/chart-1-2/chart-1-2.component.scss
+++ b/src/app/home/sections/charts/chart-1-2/chart-1-2.component.scss
@@ -9,6 +9,7 @@
         position: relative;
         padding-bottom: $events-height;
         .events {
+            z-index: 1;
             width: 100%;
             overflow: hidden;
             position: absolute;
